Language: Fix translation for confirmation when deleting a message - refs BT#21928

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -567,5 +567,6 @@
     "Continue with %s": "Continue with {0}",
     "Change Password": "Change Password",
     "All Messages": "All Messages",
-    "Promoted Messages": "Promoted Messages"
+    "Promoted Messages": "Promoted Messages",
+    "Are you sure you want to delete %s?": "Are you sure you want to delete {0}?"
 }
