--- a/assets/locales/lt_LT.json
+++ b/assets/locales/lt_LT.json
@@ -414,5 +414,9 @@
     "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)": "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)",
     "Chamilo is free software distributed under the GNU General Public licence (GPL).": "Chamilo is free software distributed under the GNU General Public licence (GPL).",
     "The install script will create (or use) the Chamilo database using the database name given here. Please make sure the user you give has the right to create the database by the name given here. If a database with this name exists, it will be overwritten. Please do not use the root user as the Chamilo database user. This can lead to serious security issues.": "The install script will create the Chamilo main database(s). Please note that Chamilo will need to create several databases. If you are allowed to use only one database by your Hosting Service, Chamilo will not work, unless you chose the option \"One database\".",
-    "The install script will erase all tables of the selected database. We heavily recommend you do a full backup of them before confirming this last install step.": "The install script will erase all tables of the selected databases. We heavily recommend you do a full backup of them before confirming this last install step."
+    "The install script will erase all tables of the selected database. We heavily recommend you do a full backup of them before confirming this last install step.": "The install script will erase all tables of the selected databases. We heavily recommend you do a full backup of them before confirming this last install step.",
+    "Continue with %s": "Continue with {0}",
+    "Change Password": "Change Password",
+    "All Messages": "All Messages",
+    "Promoted Messages": "Promoted Messages"
 }
