Language: Fix language variable and add translations - refs BT#21824

--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -29216,3 +29216,6 @@ msgstr "Freund hinzufügen"
 
 msgid "Add friend"
 msgstr "Freunde hinzufügen"
+
+msgid "Delete permanently"
+msgstr "Endgültig löschen"
