--- a/translations/messages.ar.po
+++ b/translations/messages.ar.po
@@ -15809,7 +15809,7 @@ msgstr "IP عنوان"
 msgid "Only skills that were not registered were imported"
 msgstr "فقط المهارات غير المسجلة تم استيرادها"
 
-msgid "The skill had no name set"
+msgid "The skill had no title set"
 msgstr "لايوجد اسم للمهارة"
 
 msgid "The parent skill was not set"
