--- a/translations/messages.ca_ES.po
+++ b/translations/messages.ca_ES.po
@@ -15809,7 +15809,7 @@ msgstr "Adreça IP"
 msgid "Only skills that were not registered were imported"
 msgstr "Només les competències que no estaven registrades han estat importades"
 
-msgid "The skill had no name set"
+msgid "The skill had no title set"
 msgstr "El nom de la competència no està definit"
 
 msgid "The parent skill was not set"
