--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -15869,7 +15869,7 @@ msgstr "IP-Adresse"
 msgid "Only skills that were not registered were imported"
 msgstr "Nur Fähigkeiten, die noch nicht registriert waren, wurden importiert"
 
-msgid "The skill had no name set"
+msgid "The skill had no title set"
 msgstr "Die Fähigkeit hat keinen Namen"
 
 msgid "The parent skill was not set"
