--- a/translations/messages.eu_ES.po
+++ b/translations/messages.eu_ES.po
@@ -15809,7 +15809,7 @@ msgstr "IP helbidea"
 msgid "Only skills that were not registered were imported"
 msgstr "Erregistraturik ez zeuden gaitasunak bakarrik inportatu ziren"
 
-msgid "The skill had no name set"
+msgid "The skill had no title set"
 msgstr "Ez da gaitasunaren izena zehaztu"
 
 msgid "The parent skill was not set"
