--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -16344,7 +16344,7 @@ msgstr "Adresse IP"
 msgid "Only skills that were not registered were imported"
 msgstr "Seuls les nouvelles compétences ont été importées"
 
-msgid "The skill had no name set"
+msgid "The skill had no title set"
 msgstr "La compétence n'a pas de nom"
 
 msgid "The parent skill was not set"
