--- a/translations/messages.gl_ES.po
+++ b/translations/messages.gl_ES.po
@@ -15809,7 +15809,7 @@ msgstr "Enderezo IP"
 msgid "Only skills that were not registered were imported"
 msgstr "Só foron importadas as competencias que non estaban rexistradas"
 
-msgid "The skill had no name set"
+msgid "The skill had no title set"
 msgstr "O nome da competencia non está definido"
 
 msgid "The parent skill was not set"
