--- a/translations/messages.he.po
+++ b/translations/messages.he.po
@@ -15809,7 +15809,7 @@ msgstr "כתובת IP"
 msgid "Only skills that were not registered were imported"
 msgstr "יובאו רק מיומנויות שלא נרשמו"
 
-msgid "The skill had no name set"
+msgid "The skill had no title set"
 msgstr "למיומנות לא הוגדר שם"
 
 msgid "The parent skill was not set"
