--- a/translations/messages.it.po
+++ b/translations/messages.it.po
@@ -15809,7 +15809,7 @@ msgstr "Indirizzo IP"
 msgid "Only skills that were not registered were imported"
 msgstr "Solo le competenze non registrate saranno importate"
 
-msgid "The skill had no name set"
+msgid "The skill had no title set"
 msgstr "La competenza non ha un nome impostato"
 
 msgid "The parent skill was not set"
