--- a/translations/messages.pl.po
+++ b/translations/messages.pl.po
@@ -15809,7 +15809,7 @@ msgstr "Adres IP"
 msgid "Only skills that were not registered were imported"
 msgstr "Tylko umiejętności, które nie zostały zarejestrowane zostały importowane"
 
-msgid "The skill had no name set"
+msgid "The skill had no title set"
 msgstr "Umiejętność nie nie miała ustawionej nazwy"
 
 msgid "The parent skill was not set"
