--- a/translations/messages.pt_BR.po
+++ b/translations/messages.pt_BR.po
@@ -15809,7 +15809,7 @@ msgstr "Endereço IP"
 msgid "Only skills that were not registered were imported"
 msgstr "Apenas habilidades não registradas foram importadas."
 
-msgid "The skill had no name set"
+msgid "The skill had no title set"
 msgstr "A habilidade não tem nome definido."
 
 msgid "The parent skill was not set"
