--- a/translations/messages.ro.po
+++ b/translations/messages.ro.po
@@ -15809,7 +15809,7 @@ msgstr ""
 msgid "Only skills that were not registered were imported"
 msgstr "Numai competențele care nu au fost înregistrate au fost importate"
 
-msgid "The skill had no name set"
+msgid "The skill had no title set"
 msgstr "Numele de concurență nu este definită"
 
 msgid "The parent skill was not set"
