--- a/translations/messages.uk.po
+++ b/translations/messages.uk.po
@@ -15809,7 +15809,7 @@ msgstr ""
 msgid "Only skills that were not registered were imported"
 msgstr ""
 
-msgid "The skill had no name set"
+msgid "The skill had no title set"
 msgstr ""
 
 msgid "The parent skill was not set"
